--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_hspaces.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_hspaces.tex
@@ -51,4 +51,8 @@ Given \( f:M\to\EM(G,n) \), the \emph{associated action of \( M \) on \( G \)}, 
 
 And so we can continue to work with the classifying space \( \EM(G,1) \) and study \( \K(G,1) \)-fibrations, and then later add the extra propositional requirement when it is needed to prove that we are working with \( M\to\K(G,2) \).
 
+\subsection{Pathovers}
+Suppose we have \( T:M\to\EMzo \). Paths in a sigma type \( \sit{x:M}T(x) \) are given by pairs of paths: a path \( p:x=_M y \) in the base, and a pathover \( p':\tr_p(x')=_{T(y)}y' \) between \( x':T(x) \) and \( y':T(y) \) in the fibers. We can't directly compare \( x' \) and \( y' \) since they are of different types, so we apply transport to one of them (which is asymmetrical, but equivalent to the alternatives). We say \( p' \) lies over \( p \). 
+
+The individual fibers of \( T \) are polygons (the link of the vertex of which it is the fiber). Given a path \( p:x=_M y \) in \( M \), one of its pathovers consists of a path in \( T(y) \). And given a face in \( M \), a faceover is a homotopy from a pathover to refl.
 
