placeholders for future work

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_connections.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_connections.tex
@@ -14,7 +14,7 @@ Here are the translations that are covered in the current paper:
 
 \subsection{Connections}
 
-
+The action on paths of the function \( T:M\to \EMzo \) is what is called a connection. We'll spend some time drawing more complete parallels with the classical story, both to provide some evidence and to educate. 
 
 \subsubsection{Connections as splittings}
 
