--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_poincare_hopf.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_poincare_hopf.tex
@@ -38,10 +38,18 @@ Given \( f, g:M\to B \) and \( p:x=_M y \) then
 
 \subsection{The total curvature}
 
+On the 2-face \( F \) bounding a loop \( \ell:v=_M v \) the map \( T:M\to\EMzo \) assigns a homotopy \( T(F):\refl_v=T(\ell) \), where \( T(\ell) \) is an automorphism of \( T(v) \). The various 2-faces can be composed as terms of the 2-groupoid \( M \), and we will call the composition \( T(M):T(v)=T(v) \) the \emph{total curvature}.
+
+When the fibers are torsors we need loops to see what \( T \) is doing.
 
 \subsection{The total index}
 
+When the fibers are pointed then loops are pointed automorphisms of mere circles, which are integers.
+
 \subsection{Equality of total index and total curvature}
+
+When we use the dependent action on paths, we obtain paths between the transport from the connection and the swirling of the vector field, and these cancel.
 
 \subsection{Identification with Euler characteristic}
 
+Combinatorial manifolds are intuitive objects that connect directly to the classical definition of Euler characteristic.
