lots of rewriting and figures

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_intro.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_intro.tex
@@ -2,7 +2,7 @@
 We will define 
 \begin{itemize}
 \item combinatorial 2-manifolds
-\item their tangent bundles
+\item principal circle bundles of tangent bundles
 \item vector fields,
 \end{itemize}
 and then observe emerging from those definitions the presence of
@@ -35,6 +35,5 @@ from the univalent fibration on the right, forming the usual fiber of \( T \) as
 We will investigate that the data in dimensions 1 and 2 of \( T \) can be thought of as a connection, notably one that is not necessarily flat. Moreover, lifting \( T \) to \( \EMp(\zz,1) \) can be thought of as a vector field. There will in general not be a total lift, just a partial function. The domain will have a boundary of circles, and the winding number on these can be thought of as the index of the vector field. We can then examine the total curvature and the total index and prove that they are equal, and equal to the usual Euler characteristic. This will simultaneously prove the Poincaré-Hopf theorem and Gauss-Bonnet theorem in 2 dimensions, for combinatorial manifolds.
 
 Taking the dimension 1 part of a function can be thought of as its derivative. If the codomain has an H-space structure then we can ask about how the action on paths interacts with pointwise multiplication. This will lead us to the Leibniz formula in this context, which emerges simply from horizontal composition in the codomain.
-
 
 
