--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
@@ -172,6 +172,7 @@
 \newcommand{\myfig}[2]{\begin{figure}[h]\caption{#1}\centering\includegraphics[width=0.6\textwidth]{#2}\end{figure}}
 %\newcommand{\gc}[1]{}
 \newcommand{\defeq}{\stackrel{\mathrm{def}}{=}}
+\newcommand{\defemph}[1]{\textbf{#1}}
 \newcommand{\U}{\mathcal{U}}
 \newcommand{\BG}{\mathsf{B}G}
 \newcommand{\Copy}{\mathrm{Copy}}
