--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_poincare_hopf.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_poincare_hopf.tex
@@ -44,12 +44,44 @@ When the fibers are torsors we need loops to see what \( T \) is doing.
 
 \subsection{The total index}
 
-When the fibers are pointed then loops are pointed automorphisms of mere circles, which are integers.
+If we have \( M\setminus Z \) for some isolated set of verticies \( Z \), then for each \( z:Z \) we can compose all the faces which contain \( z \), forming a new face. In this way we produce an equivalent type \( M_Z\simeq M \) but which is no longer combinatorial since we have erased some of the edges from some of the neighborhoods.
+
+If \( X \) is a vector field with isolated zeroes on \( Z \), then \( M_Z \) is a convenient replacement for \( M \) because \( X \) is a partial function defined on all of \( M_Z \) except for a collection of faces, each of which bounds one of the zeroes of \( Z \).
+
+If the combinatorial manifold was imported into type theory via some process of sampling or other, perhpaps more theoretical construction, then we should allow for zeroes to occur on verticies, edges, or faces. We can reduce the case of a zero on a vertex or edge to that of a face with the replacement method just described. The original combinatorial neighborhood structure continues to live in the fibers of \( T \), it's only the base manifold that has been replaced.
+
+The action of \( X \) around loops in \( M_Z \) respects the inverting of paths, i.e. traversing them backwards. Therefore in order to perform calculations we must also know the direction of the paths. 
+
+\begin{mydef}
+Given a connected loop \( \ell:a=_{M_Z}a \) in \( M_Z \) that is running in the clockwise direction around a face of \( M_Z \) (i.e. the face is to the right of the path), we call the winding number of \( X(\ell) \) the \defemph{index} of \( X \) around \( \ell \). If we drop the clockwise requirement, then the winding number is also known as the \defemph{degree} of the map \( X \) on \( \ell \). In other words index can be thought of as ``clockwise degree.''
+\end{mydef}
+
 
 \subsection{Equality of total index and total curvature}
 
-When we use the dependent action on paths, we obtain paths between the transport from the connection and the swirling of the vector field, and these cancel.
+If we compute \( \tr_\ell X(a)=X(a) \) around every face boundary in \( M_Z \) then we can describe that in two ways. In homotopy type theory this is ``the 1-skeleton-over,'' the pathover for the concatenation of every loop. It is also the total difference between the curvature around every loop, and the vector field. It is also zero.
+
+\begin{mythm}
+The total pathover of all face boundaries is \( \refl_* \), hence the total curvature is equal to the total index of \( X \).
+\end{mythm}
+\begin{proof}
+When we concatenate every loop we visit every edge twice in opposite directions.
+\end{proof}
+
+\begin{mycor}
+The total index of a vector field with isolated zeroes is independent of the vector field.
+\end{mycor}
+
+\begin{mycor}
+The total curvature is an integer.
+\end{mycor}
+
+The last step is to link this value to the Euler characteristic.
 
 \subsection{Identification with Euler characteristic}
 
-Combinatorial manifolds are intuitive objects that connect directly to the classical definition of Euler characteristic.
+Combinatorial manifolds are intuitive objects that connect directly to the classical definition of Euler characteristic. We can argue using Morse theory, the study of smooth real-valued functions on smooth manifolds and their singularities. Classically the gradient of a Morse function is a vector field that can be used to decompose the manifold into its \emph{handlebody decomposition}. This would be an excellent story to pursue in future work.
+
+Imagine a combinatorial manifold of a genus g oriented surface standing upright with the holes forming a vertical sequence. Now install a vector field that points downward whenever possible. This vector field will have a zero at the top and bottom, and one at the top and bottom of each hole. The top and bottom will be index 1, and ones around the holes will be index -1. 
+
+
