--- a/differential_geometry_in_hott/sage/torus.ipynb
+++ b/differential_geometry_in_hott/sage/torus.ipynb
@@ -3606,7 +3606,11 @@
    "cell_type": "code",
    "execution_count": 36,
    "id": "677ed542-1eb4-484e-ab9e-c680cdebae48",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -4355,7 +4359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 1,
    "id": "64d817c2-b9dd-41af-90b8-20f246ca6b68",
    "metadata": {
     "scrolled": true
@@ -4364,10 +4368,10 @@
     {
      "data": {
       "text/plain": [
-       "Minimal triangulation of the torus"
+       "(True, True)"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
